fix touch on mobile

--- a/docs/css/game.css
+++ b/docs/css/game.css
@@ -20,7 +20,13 @@
 canvas {
   position: absolute;
   top: 10;
-  z-index: 1; 
+  z-index: 1;
+}
+.scratch-placeholder {
+  width: 80px;
+  height: 80px;
+  margin-left: 10px;
+  margin-top: 10px;
 }
 /* #scratch {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
